Fix table spacing

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -535,4 +535,7 @@ button {
       height: 60px;
     }
   }
+  .table {
+    padding-top: $spacing;
+  }
 }
