--- a/src/components/DataTable/DataTable.scss
+++ b/src/components/DataTable/DataTable.scss
@@ -6,7 +6,6 @@
   width: 100%;
   border-radius: $border-radius;
   overflow: auto;
-  padding-top: $spacing;
 
   .grid {
     display: flex;
